[project]
name = "pyeam"
version = "0.1.0"
description = ""
authors = [{ name = "beqm", email = "brenomartinsmb@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["psutil (>=6.1.1,<7.0.0)", "requests (>=2.32.3,<3.0.0)"]

[tool.poetry.dependencies]
python = ">=3.12.2,<3.14"
pythonnet = "^3.0.5"
requests = ">=2.32.3"
psutil = ">=6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
